--- a/css/new-arriwals.css
+++ b/css/new-arriwals.css
@@ -89,3 +89,14 @@
     justify-content: space-between;
     padding: 0 0 5px 10px;
 }
+
+.line_red_text-trainers {
+    width: 30%;
+    color: red;
+}
+
+.red_line_div-new-arrival {
+    width: 30%;
+    background-color: red;
+    margin-bottom: 10px;
+}
