--- a/css/css-main-collection.css
+++ b/css/css-main-collection.css
@@ -15,6 +15,12 @@
     text-align: center; 
     
 }
+.menu-main-collection {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+    color: #717474;;
+}
 @media (min-width: 750px) {
     .main-collection-img {
         display: grid;
