--- a/css/carousel-discounts.css
+++ b/css/carousel-discounts.css
@@ -2,6 +2,36 @@
     display: block;
     width: 100%;
 }
+.of-all-t-shirt {
+    position: relative;
+}
+.off-all-trainers-one {
+    position: relative;
+}
+.off-all-jacket {
+    position: relative;
+}
+.off-all-trainers {
+    position: relative;
+}
+.discount-of-product {
+    position: absolute;
+    top: 40%;
+    left: 30%;
+    font-family: Bebas Neue,cursive;
+    font-size: 36px;
+
+}
+.shop-colection-carousel {
+    position: absolute;
+    top: 50%;
+    left: 40%;
+    line-height: 5em;
+    font-size: 14px;
+    font-family: PT Sans,sans-serif;
+    color: black;
+    
+}
 @media (min-width: 750px) {
     .carousel-discounts {
         display: grid;
