added clock to header

--- a/css/header.css
+++ b/css/header.css
@@ -18,7 +18,10 @@
         background-color: var(--company-color);
     }
     
-    
+    .container .time {
+        font-size: x-large;
+    }
+
     header {
     
         position: fixed;
