--- a/css/new-arriwals.css
+++ b/css/new-arriwals.css
@@ -132,3 +132,32 @@
     font-weight: bolder;
     margin-top: 15px;
 }
+
+@media (max-width: 768px) {
+    .menu-new-arrivals {
+        display: flex;
+        justify-content: flex-start;
+        margin-top: 50px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .menu-new-arrivals {
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
+    }
+
+   .block-new-arrival{
+      weight: 200px;
+   }
+
+   .block-trainers {
+
+   }
+
+   .block-hot-sale {
+
+   }
+
+}
