--- a/css/why-choose-us.css
+++ b/css/why-choose-us.css
@@ -138,3 +138,39 @@
     text-align: center;
     margin-bottom: 30px;
 }
+
+@media (max-width: 768px) {
+
+    .line-why-choose-us {
+        margin-left: 320px;
+    }
+}
+
+@media (max-width: 1024px) {
+
+    .line-why-choose-us {
+        margin-left: 480px;
+        width: 5%;
+    }
+
+    .benefits{
+        display: flex;
+        justify-content: center;
+    }
+
+    .section-free-shipping {
+        margin-right: 20px;
+    }
+
+    .section-easy-day-return {
+        margin-right: 20px;
+    }
+
+    .section-eco-materials {
+        margin-right: 20px;
+    }
+
+    .section-payment-methods {
+        margin-right: 20px;
+    }
+}
