--- a/css/why-choose-us.css
+++ b/css/why-choose-us.css
@@ -139,14 +139,14 @@
     margin-bottom: 30px;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
 
     .line-why-choose-us {
         margin-left: 320px;
     }
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1024px) {
 
     .line-why-choose-us {
         margin-left: 480px;
