--- a/css/new-arriwals.css
+++ b/css/new-arriwals.css
@@ -23,7 +23,6 @@
     margin-top:20px;
     border-top:2px solid #f00;
     height: 100%;
-    length: 10px;
     width: 15%;
 }
 
@@ -44,7 +43,6 @@
     margin-top:20px;
     border-top:2px solid #f00;
     height:100%;
-    length: 10px;
     width: 15%;
 }
 
@@ -65,7 +63,6 @@
     margin-top:20px;
     border-top:2px solid #f00;
     height:100%;
-    length: 10px;
     width: 15%;
 }
 
@@ -73,36 +70,22 @@
     font-family: 'PT sans';
 }
 
-.new-arrival-conteiner {
-    width: 320px;
-}
-
-.menu-new-arrivals {
-    margin-top: 50px;
-}
-
 .block-new-arrival {
     background-image: url(../img/new-arivals/man-with-sneakers.svg);
     background-position: center;
     background-size: cover;
-    height: 300px;
-    margin: 0 auto 25px auto;
 }
 
 .block-trainers {
     background-image: url(../img/new-arivals/skateboarder.png);
     background-position: center;
     background-size: cover;
-    height: 300px;
-    margin: 0 auto 25px auto;
 }
 
 .block-hot-sale {
     background-image: url(../img/new-arivals/clothes.png);
     background-position: center;
     background-size: cover;
-    height: 300px;
-    margin: 0 auto 25px auto;
 }
 
 .div-new-arrival {
@@ -141,25 +124,40 @@
     margin-top: 15px;
 }
 
+/* MAIN BLOCKS */
+
+.menu-new-arrivals {
+    width: 320px;
+    margin-top: 50px;
+}
+
+.block-new-arrival,
+.block-trainers,
+.block-hot-sale {
+    width: 90%;
+    height: 300px;
+    margin: 0 auto 25px auto;
+}
+
 @media (min-width: 768px) {
     .menu-new-arrivals {
-        display: flex;
-        margin-top: 50px;
         min-width: 768px;
-        flex-basis: 30%;
-        justify-content: space-between;
+        display: flex;
+        justify-content: space-evenly;
     }
-}
+
+    .block-new-arrival,
+    .block-trainers,
+    .block-hot-sale {
+            width: 31%;
+            height: 300px;
+            margin: 0;
+        }          
+    }
 
 @media (min-width: 1024px) {
     .menu-new-arrivals {
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        margin-top: 50px;
-
-
+        min-width: 1024px;
+        margin: 50px auto 0 auto;
+    }          
     }
-
-    
-}
