--- a/css/deal-of-the-month.css
+++ b/css/deal-of-the-month.css
@@ -71,6 +71,14 @@
     margin-top: 30px;
 }
 
+.timer__items {
+    display: flex;
+    font-size: 48px;
+    color: aliceblue;
+  }
+
+
+  
 @media (min-width: 768px) {
     .deal-of-the-month-container {
         min-width: 768px;
