--- a/css/deal-of-the-month.css
+++ b/css/deal-of-the-month.css
@@ -90,6 +90,21 @@
     text-align: center;
   }
 
+  .timer__item::before {
+    content: attr(data-title);
+    display: block;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    font-size: 14px;
+  }
+  .timer__item:not(:last-child)::after {
+    content: ':';
+    position: absolute;
+    right: -15px;
+  }
+
 @media (min-width: 768px) {
     .deal-of-the-month-container {
         min-width: 768px;
