added js file for mid-season-sale section

--- a/css/mid-season-get-your-discount.css
+++ b/css/mid-season-get-your-discount.css
@@ -1,16 +1,14 @@
-/* MID SEASON SALE */
-
-.mid-season-sale-section {
-  width: 320px;
+.wrapper {
+  min-width: 320px;
   margin: 0 auto;
-  padding: 30px 15px;
-  font-family: "PT Sans", sans-serif;
   font-size: 20px;
-  line-height: 1.3;
-  text-align: center;
 }
 
-.mid-season-sale-header {
+.mid-season-sale-section {
+  padding: 30px 15px;
+  font-family: "PT Sans", sans-serif;
+  line-height: 1.3;
+  text-align: center;
 }
 
 .mid-season-sale-tittle,
@@ -19,9 +17,10 @@
 }
 
 .mid-season-sale-tittle {
-  font-size: 1.5rem;
+  font-size: 2rem;
   text-transform: uppercase;
   font-family: "Bebas Neue", cursive;
+  font-weight: 500;
 }
 
 .header-dot-style {
@@ -35,7 +34,9 @@
   margin: 0 auto 15px auto;
 }
 
-/*  */
+.mid-season-sale-info {
+  color: #9b9b9b;
+}
 
 .mid-season-sale-products-section {
   margin-top: 30px;
@@ -56,8 +57,8 @@
 }
 
 .mid-season-sale-img {
-  display: block;
   width: 100%;
+  height: auto;
   margin-bottom: 10px;
 }
 
@@ -71,12 +72,12 @@
 
 .btn-add-to-cart {
   color: #fff;
-  font-size: 15px;
+  font-size: 1rem;
   font-weight: bold;
   text-align: center;
   background: #000;
   width: 130px;
-  padding: 10px;
+  padding: 18px;
 }
 
 .btn-add-to-cart:hover {
@@ -86,34 +87,130 @@
 /* GET YOUR DISCOUNT */
 
 .get-your-discount-section {
-  background: #000 url(../img/mid-season-get-your-discount/get-your-discount-background.png) center no-repeat;
+  background: #000 url(../img/mid-season-get-your-discount/get-your-discount-background.png) no-repeat;
   background-size: cover;
-  height: 300px;
-}
-
-.get-your-discount-info {
+  background-position: 35% center;
+  height: 485px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
+.get-your-discount-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 250px;
+  margin-left: 20px;
+}
+
 .get-your-discount-tittle {
   color: #fff;
-  font-size: 30px;
+  font-size: 63px;
+  line-height: 1;
   text-transform: uppercase;
   font-family: "Bebas Neue", cursive;
 }
 
 .get-your-discount-announce {
-  display: block;
-  color: #9b9b9b;
+  font-family: "Bebas Neue", cursive;
+  font-size: 23px;
+  color: rgba(255, 255, 255, 0.62);
+  text-transform: uppercase;
 }
 
 .btn-shop-now {
-  width: 125px;
-  padding: 10px 15px;
+  width: 164px;
+  padding: 17px 15px;
   background: #fff;
   color: #000;
-  font-weight: 400;
+  font-size: 20px;
+  font-weight: 700;
   text-align: center;
+}
+
+@media (min-width: 768px) {
+  .wrapper {
+    min-width: 768px;
+  }
+  .mid-season-sale-products-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .mid-season-sale-product {
+    display: flex;
+    flex-basis: 30%;
+    flex-direction: column;
+    margin-right: 15px;
+  }
+  .mid-season-sale-product-tittle,
+  .mid-season-sale-product-price,
+  .btn-add-to-cart,
+  .btn-shop-now {
+    margin: 0;
+  }
+  .mid-season-sale-product-info {
+    min-height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .mid-season-sale-product-zero-right-margin {
+    margin-right: 0px;
+  }
+  .mid-season-sale-product-tittle {
+    font-size: 15px;
+  }
+  .mid-season-sale-dash {
+    width: 3rem;
+  }
+  .get-your-discount-info {
+    width: 250px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .wrapper {
+    min-width: 1024px;
+  }
+  .mid-season-sale-products-section {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+  }
+  .mid-season-sale-tittle {
+    font-size: 3.3rem;
+  }
+  .mid-season-sale-dash {
+    width: 5rem;
+  }
+  .mid-season-sale-product {
+    display: flex;
+    flex-basis: 18%;
+    flex-direction: column;
+    margin: 0;
+  }
+  .mid-season-sale-product-tittle {
+    font-size: 20px;
+  }
+  .get-your-discount-section {
+    min-height: 800px;
+  }
+  .get-your-discount-tittle {
+    font-size: 5rem;
+  }
+}
+
+#ballcontainer {
+  background-color: yellow;
+  height: 500px;
+}
+
+.ball {
+  background-color: red;
+  width: 150px;
+  height: 150px;
+  border: 1px solid black;
+  border-radius: 50%;
 }
