--- a/css/deal-of-the-month.css
+++ b/css/deal-of-the-month.css
@@ -12,14 +12,12 @@
 
 .deal-of-the-month-container {
     min-width: 320px;
-    
+    margin-bottom: 50px;
 }
 
     .deal-of-the-month {
         background-color: #222323;
         padding-top: 50px;
-
-    
     }
 
     .stretching-woman {
@@ -69,11 +67,16 @@
     margin: 30px 30px 30px 30px;
 }
 
+.timer {
+    min-width: 320px;
+    padding: 30px 0; 
+}
+
 .timer__items {
     display: flex;
     font-size: 48px;
     color: aliceblue;
-    margin: 30px;
+    margin: 0;
 
   }
 
@@ -111,12 +114,10 @@
         display: flex;
         flex-basis: 50%;
     }
-
-    .deal-of-the-month {
-        padding: 50px 50px 0 50px;
-    }
-
     .stretching-woman {
+        width: 50%;
+    }
+    .deal-of-the-month {
         width: 50%;
     }
 }
@@ -125,6 +126,8 @@
     .deal-of-the-month-container {
         min-width: 1024px;
     }
+
+
 
 }
 
