--- a/css/carousel-discounts.css
+++ b/css/carousel-discounts.css
@@ -1,38 +1,44 @@
+.carousel-main {
+    position: relative;
+    margin: 0 auto;
+    max-width: 1200px;
+}
 .carousel-discounts-img {
     display: block;
     width: 100%;
+    /* max-height: 230px;
+    min-height: 225px; */
 }
-.of-all-t-shirt {
+.columns-discount-carousel {
     position: relative;
 }
-.off-all-trainers-one {
-    position: relative;
-}
-.off-all-jacket {
-    position: relative;
-}
-.off-all-trainers {
-    position: relative;
-}
+
+
 .discount-of-product {
     position: absolute;
     top: 40%;
-    left: 30%;
+    left: 20%;
     font-family: Bebas Neue,cursive;
     font-size: 36px;
+    background-color: black;
+    color: white;
+    padding: 5px;
+    opacity: 0.7;
+    
 
 }
 .shop-colection-carousel {
     position: absolute;
     top: 50%;
-    left: 40%;
-    line-height: 5em;
+    left: 35%;
+    line-height: 6em;
     font-size: 14px;
     font-family: PT Sans,sans-serif;
-    color: black;
+    color: white;
+
     
 }
-@media (min-width: 750px) {
+@media (min-width: 600px) {
     .carousel-discounts {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -41,8 +47,44 @@
 }
 @media (min-width: 975px) {
     .carousel-discounts {
-        display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 30px;
     }
+    .discount-of-product {  
+        font-size: 30px;
+    }
+}
+.next {
+    
+    position: absolute;
+    opacity: 0.6;
+    top: 50%;
+    right: -1%;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.next:hover {
+    opacity: 1;
+
+}
+
+.prev {
+
+
+    max-width: 100px;
+    position: absolute;
+    opacity: 0.6;
+    top: 50%;
+    left: -1%;
+    background-color: rgba(0, 0, 0, 0);
+
+}
+
+.prev:hover {
+    opacity: 1;
+
+}
+.carousel-main button {
+    background-color: white;
+    border: none;
 }
